Cleaned up commit history

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav>
     <div class="d-flex flex-row justify-content-between">
-      <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\logo.svg" style="margin: 5px;"/>
+      <img src="news-homepage-main\news-homepage-main\assets\images\logo.svg" style="margin: 5px;" />
       <ul class="nav justify-content-end custom-nav custom-nav-nav-link" style="margin: 5px;">
         <li class="nav-item">
           <a class="nav-link active" href="#" style="color: black; font-weight:bold;">Home</a>
