Your descriptive commit message here

--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="C:\Users\Public\Documents\main-project\news-homepage-main\stylesheet.css">
+  <link rel="stylesheet" href="./stylesheet.css">
   <title>Frontend Mentor | News homepage</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <nav>
     <div class="d-flex flex-row justify-content-between">
-      <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\logo.svg" style="margin: 5px;"/>
+      <img src="./assets/images/logo.svg" style="margin: 5px;" />
       <ul class="nav justify-content-end custom-nav custom-nav-nav-link" style="margin: 5px;">
         <li class="nav-item">
           <a class="nav-link active" href="#" style="color: black; font-weight:bold;">Home</a>
@@ -39,11 +39,11 @@
     <div class="image-container">
       <picture>
         <!-- Mobile image -->
-        <source srcset="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image">
+        <source srcset="./assets/images/image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image">
         <!-- Tablet image -->
-        <source srcset="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-web-3-tablet.jpg" media="(max-width: 768px)" class="img-fluid picture-image"> 
+        <source srcset="./assets/images/image-web-3-tablet.jpg" media="(max-width: 768px)" class="img-fluid picture-image"> 
         <!-- Desktop image -->
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-web-3-desktop.jpg" media="(max-width: 1200px)" alt="Web 3.0 Image" class="img-fluid picture-image">
+        <img src="./assets/images/image-web-3-desktop.jpg" media="(max-width: 1200px)" alt="Web 3.0 Image" class="img-fluid picture-image">
       </picture>
       <!-- Middle Section: Heading and Description -->
       <div class="head-description-container d-flex flex-row justify-content-center">
@@ -79,7 +79,7 @@
   <div class="d-flex flex-row justify-content-between">
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-retro-pcs.jpg" class="image-box"/>
+        <img src="./assets/images/image-retro-pcs.jpg" class="image-box"/>
       </div>
       <div class="content-container">
         <h1 class="heading1">01</h1>
@@ -92,7 +92,7 @@
       
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-top-laptops.jpg" class="image-box"/>
+        <img src="./assets/images/image-top-laptops.jpg" class="image-box"/>
       </div>
       <div class="content-container">
         <h1 class="heading1">02</h1>
@@ -104,7 +104,7 @@
     </div>
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-gaming-growth.jpg" class="image-box"/>
+        <img src="./assets/images/image-gaming-growth.jpg" class="image-box"/>
       </div>
       <div class="content-container">
         <h1 class="heading1">03</h1>
