--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <div class="image-container">
       <picture>
         <!-- Mobile image -->
-        <source srcset="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image">
+        <source srcset="./assets/images/image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image">
         <!-- Tablet image -->
-        <source srcset="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-web-3-tablet.jpg" media="(max-width: 768px)" class="img-fluid picture-image"> 
+        <source srcset="./assets/images/image-web-3-tablet.jpg" media="(max-width: 768px)" class="img-fluid picture-image"> 
         <!-- Desktop image -->
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-web-3-desktop.jpg" media="(max-width: 1200px)" alt="Web 3.0 Image" class="img-fluid picture-image">
+        <img src="./assets/images/image-web-3-desktop.jpg" alt="Web 3.0 Image" class="img-fluid picture-image">
       </picture>
       <!-- Middle Section: Heading and Description -->
       <div class="head-description-container d-flex flex-row justify-content-center">
@@ -79,7 +79,7 @@
   <div class="d-flex flex-row justify-content-between">
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-retro-pcs.jpg" class="image-box"/>
+        <img src="./assets/images/image-retro-pcs.jpg" class="image-box" />
       </div>
       <div class="content-container">
         <h1 class="heading1">01</h1>
@@ -92,7 +92,7 @@
       
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-top-laptops.jpg" class="image-box"/>
+        <img src="./assets/images/image-top-laptops.jpg" class="image-box" />
       </div>
       <div class="content-container">
         <h1 class="heading1">02</h1>
@@ -104,7 +104,7 @@
     </div>
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="C:\Users\Public\Documents\main-project\news-homepage-main\assets\images\image-gaming-growth.jpg" class="image-box"/>
+        <img src="./assets/images/image-gaming-growth.jpg" class="image-box" />
       </div>
       <div class="content-container">
         <h1 class="heading1">03</h1>
