Fix image paths and update index.html for live deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./news-homepage-main/assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./stylesheet.css">
   <title>Frontend Mentor | News homepage</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
 
   <nav>
     <div class="d-flex flex-row justify-content-between">
-      <img src="news-homepage-main\news-homepage-main\assets\images\logo.svg" style="margin: 5px;" />
+      <img src="./news-homepage-main/assets/images/logo.svg" style="margin: 5px;" />
       <ul class="nav justify-content-end custom-nav custom-nav-nav-link" style="margin: 5px;">
         <li class="nav-item">
           <a class="nav-link active" href="#" style="color: black; font-weight:bold;">Home</a>
@@ -39,11 +39,9 @@
     <div class="image-container">
       <picture>
         <!-- Mobile image -->
-        <source srcset="./assets/images/image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image">
-        <!-- Tablet image -->
-        <source srcset="./assets/images/image-web-3-tablet.jpg" media="(max-width: 768px)" class="img-fluid picture-image"> 
+        <source srcset="./news-homepage-main/assets/images/image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image"> 
         <!-- Desktop image -->
-        <img src="./assets/images/image-web-3-desktop.jpg" alt="Web 3.0 Image" class="img-fluid picture-image">
+        <img src="./news-homepage-main/assets/images/image-web-3-desktop.jpg" alt="Web 3.0 Image" class="img-fluid picture-image">
       </picture>
       <!-- Middle Section: Heading and Description -->
       <div class="head-description-container d-flex flex-row justify-content-center">
@@ -79,7 +77,7 @@
   <div class="d-flex flex-row justify-content-between">
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="./assets/images/image-retro-pcs.jpg" class="image-box" />
+        <img src="./news-homepage-main/assets/images/image-retro-pcs.jpg" class="image-box" />
       </div>
       <div class="content-container">
         <h1 class="heading1">01</h1>
@@ -92,7 +90,7 @@
       
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="./assets/images/image-top-laptops.jpg" class="image-box" />
+        <img src="./news-homepage-main/assets/images/image-top-laptops.jpg" class="image-box" />
       </div>
       <div class="content-container">
         <h1 class="heading1">02</h1>
@@ -104,7 +102,7 @@
     </div>
     <div class="d-flex flex-row pic-container">
       <div>
-        <img src="./assets/images/image-gaming-growth.jpg" class="image-box" />
+        <img src="./news-homepage-main/assets/images/image-gaming-growth.jpg" class="image-box" />
       </div>
       <div class="content-container">
         <h1 class="heading1">03</h1>
