--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav>
     <div class="d-flex flex-row justify-content-between">
-      <img src="news-homepage-main\news-homepage-main\assets\images\logo.svg" style="margin: 5px;" />
+      <img src="./assets/images/logo.svg" style="margin: 5px;" />
       <ul class="nav justify-content-end custom-nav custom-nav-nav-link" style="margin: 5px;">
         <li class="nav-item">
           <a class="nav-link active" href="#" style="color: black; font-weight:bold;">Home</a>
@@ -39,9 +39,7 @@
     <div class="image-container">
       <picture>
         <!-- Mobile image -->
-        <source srcset="./assets/images/image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image">
-        <!-- Tablet image -->
-        <source srcset="./assets/images/image-web-3-tablet.jpg" media="(max-width: 768px)" class="img-fluid picture-image"> 
+        <source srcset="./assets/images/image-web-3-mobile.jpg" media="(max-width: 375px)" class="img-fluid picture-image"> 
         <!-- Desktop image -->
         <img src="./assets/images/image-web-3-desktop.jpg" alt="Web 3.0 Image" class="img-fluid picture-image">
       </picture>
